# circfirm

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Makefile  NOTICE  NOTICE.license  README.rst  README.rst.license  pyproject.toml  requirements-dev.txt  requirements.txt  uv.lock.license
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish,yml  publish.yml  push.yml  test-check.yml  test-code.yml  test-docs.yml  test-packaging.yml
.reuse/: dep5
circfirm/: __init__.py  backend.py  cli.py  startup.py
circfirm/backend/: __init__.py  cache.py  config.py  device.py  github.py  s3.py
circfirm/cli/: __init__.py  about.py  cache.py  config.py  current.py  detect.py  install.py  path.py  query.py  update.py
circfirm/plugins/: __init__.py
circfirm/templates/: settings.schema.yaml  settings.schema.yaml.license  settings.yaml  setttings.schema.yaml
docs/: conf.py  index.rst
docs/commands/: cache.rst  config.rst  current.rst  detect.rst  install.rst  path.rst  query.rst  update.rst
docs/configuration/: settings.rst
docs/examples/: update_many.rst  weekly_cache.rst
docs/infrastructure/: ci.rst  codecheck.rst  docs.rst  license.rst  notice.rst  tests.rst
docs/plugins/: create.rst  example.rst  intro.rst
examples/bash/: update_many.sh  weekly_cache.sh
examples/plugins/: module_plugin.py
examples/plugins/package_plugin/: __init__.py
examples/powershell/: update_many.ps1  weekly_cache.ps1
scripts/: rmdir.py
tests/: conftest.py  helpers.py  test_backend.py  test_cli.py  test_cli_query.py  test_package.py  test_startup.py
tests/assets/: boot_out.txt  info_uf2.txt
tests/assets/firmwares/feather_m0_express/: adafruit-circuitpython-feather_m0_express-en_US-7.0.0.uf2  adafruit-circuitpython-feather_m0_express-en_US-7.1.0.uf2  adafruit-circuitpython-feather_m0_express-en_US-7.2.0.uf2  adafruit-circuitpython-feather_m0_express-fr-7.0.0.uf2  adafruit-circuitpython-feather_m0_express-fr-7.1.0.uf2  adafruit-circuitpython-feather_m0_express-fr-7.2.0.uf2  adafruit-circuitpython-feather_m0_express-zh_Latn_pinyin-7.0.0.uf2  adafruit-circuitpython-feather_m0_express-zh_Latn_pinyin-7.1.0.uf2  adafruit-circuitpython-feather_m0_express-zh_Latn_pinyin-7.2.0.uf2
tests/assets/firmwares/feather_m4_express/: adafruit-circuitpython-feather_m4_express-en_US-7.0.0.uf2  adafruit-circuitpython-feather_m4_express-en_US-7.1.0.uf2  adafruit-circuitpython-feather_m4_express-en_US-7.2.0.uf2  adafruit-circuitpython-feather_m4_express-fr-7.0.0.uf2  adafruit-circuitpython-feather_m4_express-fr-7.1.0.uf2  adafruit-circuitpython-feather_m4_express-fr-7.2.0.uf2  adafruit-circuitpython-feather_m4_express-zh_Latn_pinyin-7.0.0.uf2  adafruit-circuitpython-feather_m4_express-zh_Latn_pinyin-7.1.0.uf2  adafruit-circuitpython-feather_m4_express-zh_Latn_pinyin-7.2.0.uf2
tests/assets/firmwares/pygamer/: adafruit-circuitpython-pygamer-en_US-7.0.0.uf2  adafruit-circuitpython-pygamer-en_US-7.1.0.uf2  adafruit-circuitpython-pygamer-en_US-7.2.0.uf2  adafruit-circuitpython-pygamer-fr-7.0.0.uf2  adafruit-circuitpython-pygamer-fr-7.1.0.uf2  adafruit-circuitpython-pygamer-fr-7.2.0.uf2  adafruit-circuitpython-pygamer-zh_Latn_pinyin-7.0.0.uf2  adafruit-circuitpython-pygamer-zh_Latn_pinyin-7.1.0.uf2  adafruit-circuitpython-pygamer-zh_Latn_pinyin-7.2.0.uf2
tests/assets/plugins/: missing_plugin.py  module_plugin.py  settings.yaml
tests/assets/plugins/package_plugin/: __init__.py  extra.py
tests/assets/responses/: full_list.txt  specific_board.txt
tests/assets/settings/: settings.schema.yaml  settings.yaml
tests/backend/: test_backend.py  test_backend_cache.py  test_backend_config.py  test_backend_device.py  test_backend_github.py  test_backend_s3.py
tests/cli/: test_cli.py  test_cli_about.py  test_cli_cache.py  test_cli_config.py  test_cli_current.py  test_cli_detect.py  test_cli_install.py  test_cli_query.py  test_cli_update.py
tests/plugins/: test_plugins.py
