# SPDX-FileCopyrightText: 2022 Alec Delaney, for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circfirm"
description = "CLI tool for install firmware for CircuitPython boards"
requires-python = ">=3.8.0"
readme = "README.rst"
authors = [
    {name = "Alec Delaney", email = "tekktrik@gmail.com"}
]
keywords = [
    "adafruit",
    "circuitpython",
    "tool",
    "cli",
    "firmware",
    "install",
    "upload",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/tekktrik/circfirm"
Repository = "https://github.com/tekktrik/circfirm.git"
Issues = "https://github.com/tekktrik/circfirm/issues"

[project.scripts]
circfirm = "circfirm.cli:cli"

[tool.setuptools]
packages = ["circfirm", "circfirm.cli"]
include-package-data = true

[tool.setuptools.dynamic.version]
file = "VERSION"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[tool.setuptools_scm]

[tool.coverage.run]
source = [
    "circfirm/",
    "tests/",
]

[tool.ruff.lint]
select = ["D", "PL", "UP", "I"]
ignore = ["D213", "D203"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:datetime.datetime.utcfromtimestamp():DeprecationWarning"]
addopts = [
    "--ignore=tests/sandbox/circuitpython"
]
