# SPDX-FileCopyrightText: 2022 Alec Delaney, for Adafruit Industries
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circfirm"
description = "CLI tool for install firmware for CircuitPython boards"
requires-python = ">=3.10.0"
readme = "README.rst"
authors = [
    {name = "Alec Delaney", email = "tekktrik@gmail.com"}
]
keywords = [
    "adafruit",
    "circuitpython",
    "tool",
    "cli",
    "firmware",
    "install",
    "upload",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Typing :: Typed",
]
dependencies = [
    "boto3==1.42.57",
    "boto3-stubs[essential]==1.42.55",
    "click==8.3.1",
    "click-spinner==0.1.10",
    "packaging==26.0",
    "psutil==7.2.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build==1.4.0",
    "coverage==7.13.4",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "sphinx==8.1.3",
    "sphinx-tabs==3.4.7",
    "sphinx-rtd-theme==3.1.0",
]


[project.urls]
Homepage = "https://github.com/tekktrik/circfirm"
Repository = "https://github.com/tekktrik/circfirm.git"
Issues = "https://github.com/tekktrik/circfirm/issues"

[project.scripts]
circfirm = "circfirm.cli:cli"

[tool.setuptools]
packages = [
    "circfirm",
    "circfirm.cli",
    "circfirm.backend",
]
include-package-data = true

[tool.setuptools.dynamic.version]
file = "VERSION"

[tool.setuptools_scm]

[tool.coverage.run]
source = [
    "circfirm/",
    "tests/",
]

[tool.ruff.lint]
select = ["D", "PL", "UP", "I", "F"]
ignore = ["D213", "D203"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:datetime.datetime.utcfromtimestamp():DeprecationWarning"]
addopts = [
    "--ignore=tests/sandbox/circuitpython",
    "--ignore=tests/backup",
]
